--- a/app/templates/promotion.html
+++ b/app/templates/promotion.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+<!-- {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
 
 
@@ -18,4 +18,4 @@
     
     </div>
 
-{% endblock %}
+{% endblock %} -->
