--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,5 @@
-{% extends 'auth/auth-base.html'%}
-{% import 'bootstrap/wtf.html' as wtf%}
+{% extends 'auth/auth-base.html'%} {% import 'bootstrap/wtf.html' as wtf %} {% block content %}
 
-{% block content%}
 
 <div class="container">
   <div class="row">
@@ -11,17 +9,16 @@
     <div class="col-md-8">
       <!-- Flash message -->
       {% for message in get_flashed_messages() %}
-          <div class="alert alert-danger">
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-          {{ message }}
-          </div>
+      <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert">&times;</button> {{ message }}
+      </div>
 
       {% endfor %}
       <!-- Login form  -->
 
       {{ wtf.quick_form(login_form) }}
 
-      <p> Don't  have an account?  <a href="{{url_for('auth.register')}}">Sign up here</a></p>
+      <p> Don't have an account? <a href="{{url_for('auth.register')}}">Sign up here</a></p>
 
     </div>
 
