--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+<!-- {% extends 'base.html'%}
 
 {% block content%}
 <div class="container-fluid">
@@ -13,4 +13,4 @@
     </div>
   </div>
 </div>
-{%endblock%}
+{%endblock%} -->
