--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,63 +1,35 @@
 {% extends 'base.html'%}
-{% import 'macros.html' as macro%}
+{% import 'macros.html' as macro %}
 
 {% block styles%}
-{{ super() }}
-<link href="https://fonts.googleapis.com/css?family=Akronim|Bellefair|Joti+One" rel="stylesheet">
+    {{ super() }}
 {% endblock %}
-
 {% block content %}
-    <div class="container" style="background-color:gainsboro; padding:20px; margin-top:0px; padding-top:40px; padding-bottom:400px;">
-        <div class="row" style="text-align:center; font-size:30px;">
-            <span style="font-size:40px; font-family: 'Akronim', cursive;">oNe mINute PiTch</span>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3"> 
-                    <a href="{{url_for('main.interview')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
-                        <br>
-                        Inteview Pitches
-                    </a>
-                    <br>
-                    <a href="{{url_for('main.pick_up_line')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
-                        <br>
-                        Pick Up Lines
-                    </a>
-                    <br>
-                    <a href="{{url_for('main.promotion')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
-                        <br>
-                        Promotion Pitches
-                    </a>
-                    <br>
-                    <a href="{{url_for('main.product')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
-                        <br>
-                        Product Pitches
-                    </a>
-                    <br>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-9">
-            <div class="panel style="style="border: 3px solid #f2f2f2; padding:20px; margin-top:10px;">
-                <p style="font-family: 'Bellefair', serif; font-size:20px;">Write your one minute in any of the categories to the left and let other user vote and comment on it.Please also feel free to comment and vote on pitches posted by other people </p>
-                
-                <div style="text-align:center;">
-                    <a href="{{url_for('main.new_pitch')}}">
-                        <br>
-                        <span >Add a new Pitch</span>
-                    </a>
 
-                </div>
-            
-            </div>
-            
-        </div>
-    </hr>
-        <div class="all-pitches">
-            <span style="color:gainsboro;">All pitches are displayed below</span>
-                <hr> 
-                {{macro.displayPitches(pitches)}}
-            
 
-        </div>
+    <div class="container" style="font-family: 'Russo One', sans-serif;">
+      <div class="row" style="margin-top:30px">
+        <h4 class="text-left"><a class="btn btn-primary" href="/add/category"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>   Add Category </a></h4>
 
+          {{ macro.displayCategoryList(categories) }}
+        </div>
     </div>
 
-
 {% endblock %}
+{% macro displayPitches(pitch_list) %}
+  {% for pitches in pitch_list %}
+    <div class="col-md-6">
+      <div class="well">
+        <div class="row">
+          <div class="col-md-6">
+              <h3>{{pitches.content}}</h3>
+          </div>
+          <div class="col-md-6">
+            <p>POSTED: {{pitches.date_posted.strftime('%Y/%m/%d || %r')}}</p>
+            <a href="/pitch/{{pitches.id}}"><h4>COMMENT</h4></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+{% endmacro %}
