--- a/app/templates/interview.html
+++ b/app/templates/interview.html
@@ -1,20 +1,26 @@
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
 
+{% block styles%}
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
+
+
 {% block content %}
 
     <div class="container">
-        <h3>Inteview Pitches</h3>
+        <h3>Interview Pitches</h3>
         <a href="{{url_for('main.new_pitch')}}">
             <br>
             Add a new Pitch
         </a>
 
         <hr>
-        
-            {{macro.displayPitchesInCategories(pitches,1)}}
+
+            {{macro.displayPitches(pitches,1)}}    <a href="{{url_for('main.new_comment')}}"> Comment</a>
         <hr>
-    
+
     </div>
 
 {% endblock %}
