--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,43 +1,39 @@
-{% macro displayPitches(pitches_list) %}
+{% macro displayCategoryList(category_list) %}
+  {% for category in category_list%}
+        <div>
 
-    {% for pitch in pitches_list %}
-      <div class="panel style="style="box-shadow: 5px 5px 5px 5px #f2f2f2; padding:10px; text-align:center;">
-          <p>{{pitch.pitch}}</p>
-          <br>
-          <a href="{{url_for('main.new_comment',id=pitch.id)}}">Add a Comment</a>&nbsp;&nbsp;|
-          <a href="{{url_for('main.view_comments',id=pitch.id)}}">View Comments</a>&nbsp;&nbsp;|
-          <a href="{{url_for('main.new_comment',id=pitch.id)}}">Vote</a>
-      </div> 
+          <a href="{{url_for('.category',id=category.id)}}"><p>{{category.name|upper}}</p></a>
+        </div>
+
     {% endfor %}
-
 {% endmacro %}
 
-<!-- Displaying comments macro -->
-{% macro displayComments(list_of_comments) %}
-{% for comment in list_of_comments  %}
-<div class="row">
-    
-          <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
-            <h4>Author</h4>
-            <p>{{comment.user.username}}</p>
-          </div>
-          <div class="col-xs-10 col-sm-10 col-md-8 col-lg-8">
-            <h2> <a href="{{url_for('main.single_comment',id=comment.id)}}">{{comment.pitch_title}}</a> </h2>
-          </div>
-        </div>
+{% macro displayPitches(pitch_list) %}
+  {% for pitches in pitch_list %}
+  <div class="col-md-12">
+    <div class="well">
+      <div class="row">
+        <p>{{pitches.name|upper}}</p></a>
+        <div class="col-md-10 col-sm-12">
+            <h3>{{pitches.content}}</h3>
+              <h4>  <span><a href=" {{url_for('.view_pitch',id=pitches.id)}}">Read comments</a></span>  </h4>
 
-{% endfor %}
-{% endmacro %}
-
-{% macro displayPitchesInCategories(pitches,id)%}
-  {% for pitch in pitches %}
-    {% if pitch.category_id==id%}
-        <div class="panel style="style="box-shadow: 5px 5px 5px 5px #f2f2f2; padding:10px;">
-            <p>{{pitch.pitch}}</p>
-            <a href="{{url_for('main.new_comment',id=pitch.id)}}">Add a Comment</a>&nbsp;&nbsp;|
-            <a href="{{url_for('main.view_comments',id=pitch.id)}}">View Comments</a>&nbsp;&nbsp;|
-            <a href="{{url_for('main.new_comment',id=pitch.id)}}">Vote</a>
+            <a href=" {{url_for('.post_comment',id=pitches.id)}}"><h4>COMMENT</h4></a>
         </div>
-    {% endif%}
+        </div>
+    </HISTORY> ..
+
+  </div>
   {% endfor %}
-{% endmacro%}
+{% endmacro %}
+
+
+{% macro displaySpecificPitch(specific_pitch_list) %}
+ {% for comment in specific_pitch_list %}
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
+        <hr>
+        <p style="color:orange">{{comment.opinion}} </p>
+         <p style="text-align:right; color:#555652; font-size:10px;">{{comment.time_posted.strftime('%Y/%m/%d || %r') }}</p>
+    </div>
+  {% endfor %}
+{% endmacro %}
