--- a/app/templates/pitch.html
+++ b/app/templates/pitch.html
@@ -1,31 +1,16 @@
-{% extends 'base.html'%}
-{% import 'macros.html' as macro%}
+{% extends 'base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
+ {%block styles%}
+  {{ super() }}
 
-<!-- Content block -->
+{%endblock%}
+
 {% block content %}
-<div class="container">
-
-    <!-- Poster background -->
-    <div class="row">
-            <h3>Pitch ID:{{ found_pitch.id }}</h3>
-
-            <p> {{ found_pitch.pitch }}</p>
-
-            <a href="/pitch/comments/new/{{found_pitch.id}}"> Comment</a>
-    </div>
-    <div class="row">
-            
-                    <h1>Comments on this Pitch</h1>
-                    <hr>
-            
-                    {% if pitch_comments %}
-                        {{ macro.displayComments(pitch_comments) }}
-            
-                    {% else%}
-                        <h3 class="text-center">This Pitch has no Comments </h3>
-                    {% endif %}
-
-                </div>
-
+<div class="container col-md-6" style="text-align:center">
+    <h3>{{category.name|upper}} PITCH</h3>
+  <div class="well">
+    <hr>
+    {{wtf.quick_form(pitch_form)}}
+ </div>
 </div>
 {% endblock %}
