--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<!-- <div class="col-md-4">
     {% if user.profile_pic_path %}
 
     <img src="{{url_for('static',filename=user.profile_pic_path)}}" alt="" class="img-thumbnail">
@@ -14,4 +14,4 @@
       <input type="file"  name="photo" class="form-control" required>
       <input type="submit">
       {% endif %}
-  </div>
+  </div> -->
